feat: chat info store to pg
