# apiserver/docs/swagger.json
@@ -86,7 +86,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/chat.Conversation"
+                                "$ref": "#/definitions/storage.Conversation"
                             }
                         }
                     },
@@ -177,7 +177,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/chat.Conversation"
+                            "$ref": "#/definitions/storage.Conversation"
                         }
                     },
                     "400": {
@@ -1001,37 +1001,6 @@
                 }
             }
         },
-        "chat.Conversation": {
-            "type": "object",
-            "properties": {
-                "app_name": {
-                    "type": "string",
-                    "example": "chat-with-llm"
-                },
-                "app_namespace": {
-                    "type": "string",
-                    "example": "arcadia"
-                },
-                "id": {
-                    "type": "string",
-                    "example": "5a41f3ca-763b-41ec-91c3-4bbbb00736d0"
-                },
-                "messages": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/chat.Message"
-                    }
-                },
-                "started_at": {
-                    "type": "string",
-                    "example": "2023-12-21T10:21:06.389359092+08:00"
-                },
-                "updated_at": {
-                    "type": "string",
-                    "example": "2023-12-22T10:21:06.389359092+08:00"
-                }
-            }
-        },
         "chat.ConversationReqBody": {
             "type": "object",
             "required": [
@@ -1062,29 +1031,6 @@
                 "error": {
                     "type": "string",
                     "example": "conversation is not found"
-                }
-            }
-        },
-        "chat.Message": {
-            "type": "object",
-            "properties": {
-                "answer": {
-                    "type": "string",
-                    "example": "旷工最小计算单位为0.5天。"
-                },
-                "id": {
-                    "type": "string",
-                    "example": "4f3546dd-5404-4bf8-a3bc-4fa3f9a7ba24"
-                },
-                "query": {
-                    "type": "string",
-                    "example": "旷工最小计算单位为多少天？"
-                },
-                "references": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/retriever.Reference"
-                    }
                 }
             }
         },
@@ -1338,6 +1284,60 @@
                 },
                 "uploadID": {
                     "type": "string"
+                }
+            }
+        },
+        "storage.Conversation": {
+            "type": "object",
+            "properties": {
+                "app_name": {
+                    "type": "string",
+                    "example": "chat-with-llm"
+                },
+                "app_namespace": {
+                    "type": "string",
+                    "example": "arcadia"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "5a41f3ca-763b-41ec-91c3-4bbbb00736d0"
+                },
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/storage.Message"
+                    }
+                },
+                "started_at": {
+                    "type": "string",
+                    "example": "2023-12-21T10:21:06.389359092+08:00"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2023-12-22T10:21:06.389359092+08:00"
+                }
+            }
+        },
+        "storage.Message": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string",
+                    "example": "旷工最小计算单位为0.5天。"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "4f3546dd-5404-4bf8-a3bc-4fa3f9a7ba24"
+                },
+                "query": {
+                    "type": "string",
+                    "example": "旷工最小计算单位为多少天？"
+                },
+                "references": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/retriever.Reference"
+                    }
                 }
             }
         }
